Completed error messages including localization support

--- a/src/main/resources/io/jenkins/plugins/adoptopenjdk/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/adoptopenjdk/Messages.properties
@@ -24,3 +24,18 @@
 # #L%
 ###
 AdoptOpenJDKInstaller.DescriptorImpl.DisplayName=Install from adoptopenjdk.net
+
+AdoptOpenJDKInstaller.getAdoptOpenJDKFamilyList.NoDownloadable=AdoptOpenJDKList is not registered as a Downloadable
+
+AdoptOpenJDKInstaller.performInstallation.emptyJdkFamilyList=Unable to download release list
+AdoptOpenJDKInstaller.performInstallation.releaseNotFound=Unable to locate release: {0}
+AdoptOpenJDKInstaller.performInstallation.binaryNotFound=Unable to locate binary. ID: {0}, Platform: {1}, CPU: {2}
+AdoptOpenJDKInstaller.performInstallation.JdkSkipped=JDK installation skipped: {0}
+
+AdoptOpenJDKInstaller.Platform.nullChannel=Channel is null, cannot determine Platform of: {0}
+AdoptOpenJDKInstaller.Platform.unknownPlatform=Unknown Platform name: {0}
+
+AdoptOpenJDKInstaller.CPU.nullChannel=Channel is null, cannot determine CPU of: {0}
+AdoptOpenJDKInstaller.CPU.unknownCpu=Unknown CPU architecture: {0}
+
+AdoptOpenJDKInstaller.AdoptOpenJDKRelease.usupportedCpu=Unsupported CPU architecture: {0}
