--- a/src/main/resources/io/jenkins/plugins/adoptopenjdk/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/adoptopenjdk/Messages.properties
@@ -31,7 +31,7 @@ AdoptOpenJDKInstaller.performInstallation.emptyJdkFamilyList=Unable to download 
 AdoptOpenJDKInstaller.performInstallation.releaseNotFound=Unable to locate release: {0}
 AdoptOpenJDKInstaller.performInstallation.binaryNotFound=Unable to locate binary. ID: {0}, Platform: {1}, CPU: {2}
 AdoptOpenJDKInstaller.performInstallation.JdkSkipped=JDK installation skipped: {0}
-AdoptOpenJDKInstaller.performInstallation.path=Installing JDK to {0}
+AdoptOpenJDKInstaller.performInstallation.path=Installing AdoptOpenJDK to {0}
 
 AdoptOpenJDKInstaller.Platform.nullChannel=Channel is null, cannot determine Platform of: {0}
 AdoptOpenJDKInstaller.Platform.unknownPlatform=Unknown Platform name: {0}
