fix: JENKINS-61913, JENKINS-63191
JENKINS-61913 - Always install from cache on master to prevent warnings in log for expected behaviour. This method also fixes JENKINS-63191.

--- a/src/main/resources/io/jenkins/plugins/adoptopenjdk/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/adoptopenjdk/Messages.properties
@@ -32,6 +32,8 @@ AdoptOpenJDKInstaller.performInstallation.releaseNotFound=Unable to locate relea
 AdoptOpenJDKInstaller.performInstallation.binaryNotFound=Unable to locate binary. ID: {0}, Platform: {1}, CPU: {2}
 AdoptOpenJDKInstaller.performInstallation.JdkSkipped=AdoptOpenJDK installation skipped: {0}
 AdoptOpenJDKInstaller.performInstallation.path=Installing AdoptOpenJDK to {0}
+AdoptOpenJDKInstaller.performInstallation.fromCache=Installing AdoptOpenJDK from {0} to {1} on {2}
+AdoptOpenJDKInstaller.performInstallation.failedToUnpack=Failed to unpack {0} ({1} bytes read)
 
 AdoptOpenJDKInstaller.Platform.nullChannel=Channel is null, cannot determine Platform of: {0}
 AdoptOpenJDKInstaller.Platform.unknownPlatform=Unknown Platform name: {0}
