JENKINS-59584 - Improved error message

--- a/src/main/resources/io/jenkins/plugins/adoptopenjdk/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/adoptopenjdk/Messages.properties
@@ -29,7 +29,7 @@ AdoptOpenJDKInstaller.getAdoptOpenJDKFamilyList.NoDownloadable=AdoptOpenJDKList 
 
 AdoptOpenJDKInstaller.performInstallation.emptyJdkFamilyList=Unable to download release list
 AdoptOpenJDKInstaller.performInstallation.releaseNotFound=Unable to locate release: {0}
-AdoptOpenJDKInstaller.performInstallation.binaryNotFound=Unable to locate binary. ID: {0}, Platform: {1}, CPU: {2}
+AdoptOpenJDKInstaller.performInstallation.binaryNotFound=Unable to locate binary. A release might not exist for the selected combination. ID: {0}, Platform: {1}, CPU: {2}
 AdoptOpenJDKInstaller.performInstallation.JdkSkipped=AdoptOpenJDK installation skipped: {0}
 AdoptOpenJDKInstaller.performInstallation.path=Installing AdoptOpenJDK to {0}
 AdoptOpenJDKInstaller.performInstallation.fromCache=Installing AdoptOpenJDK from {0} to {1} on {2}
