--- a/src/main/resources/io/jenkins/plugins/adoptopenjdk/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/adoptopenjdk/Messages.properties
@@ -1,6 +1,6 @@
 ###
 # #%L
-# AdoptOpenJDK installer Plugin
+# Eclipse Temurin installer Plugin
 # %%
 # Copyright (C) 2016 - 2019 Mads Mohr Christensen
 # %%
@@ -23,16 +23,16 @@
 # THE SOFTWARE.
 # #L%
 ###
-AdoptOpenJDKInstaller.DescriptorImpl.DisplayName=Install from adoptopenjdk.net
+AdoptOpenJDKInstaller.DescriptorImpl.DisplayName=Install from adoptium.net
 
 AdoptOpenJDKInstaller.getAdoptOpenJDKFamilyList.NoDownloadable=AdoptOpenJDKList is not registered as a Downloadable
 
 AdoptOpenJDKInstaller.performInstallation.emptyJdkFamilyList=Unable to download release list
 AdoptOpenJDKInstaller.performInstallation.releaseNotFound=Unable to locate release: {0}
 AdoptOpenJDKInstaller.performInstallation.binaryNotFound=Unable to locate binary. A release might not exist for the selected combination. ID: {0}, Platform: {1}, CPU: {2}
-AdoptOpenJDKInstaller.performInstallation.JdkSkipped=AdoptOpenJDK installation skipped: {0}
-AdoptOpenJDKInstaller.performInstallation.path=Installing AdoptOpenJDK to {0}
-AdoptOpenJDKInstaller.performInstallation.fromCache=Installing AdoptOpenJDK from {0} to {1} on {2}
+AdoptOpenJDKInstaller.performInstallation.JdkSkipped=Eclipse Temurin installation skipped: {0}
+AdoptOpenJDKInstaller.performInstallation.path=Installing Eclipse Temurin to {0}
+AdoptOpenJDKInstaller.performInstallation.fromCache=Installing Eclipse Temurin from {0} to {1} on {2}
 AdoptOpenJDKInstaller.performInstallation.failedToUnpack=Failed to unpack {0} ({1} bytes read)
 
 AdoptOpenJDKInstaller.Platform.nullChannel=Channel is null, cannot determine Platform of: {0}
